Fix popup style to prevent overflow

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -215,6 +215,11 @@ span.color[data-color=''][data-selected]:after {
 }
 
 .stop-popup {
+  .stop-popup-header:before, .stop-popup-header:after {
+    content: " ";
+    display: table;
+    clear: both;
+  }
   .visits {
     max-height: 200px;
     overflow-y: auto;
